@@ -1,11 +1,15 @@
 # ChangeLog for calc-extension:
 
+*calc-extension-5.4:
+	Martin Väth <martin at mvath.de>:
+	- Provide chrome compatibility layer in javascript
+
 *calc-extension-5.3:
-	Martin Väth <mvath at google.com>:
+	Martin Väth <martin at mvath.de>:
 	- Fix parsing regression introduced in calc-extension-5.2
 
 *calc-extension-5.2:
-	Martin Väth <mvath at google.com>:
+	Martin Väth <martin at mvath.de>:
 	- Accept \d+. as a valid number.
 	  Thanks to Alexandre Fedotov for reporting.
 
